--- a/docs/asciidoc/back_matter.adoc
+++ b/docs/asciidoc/back_matter.adoc
@@ -1,4 +1,4 @@
-== Appendix: Compact Identifiers
+== Appendix: Compact Identifier-Based URIs
 
 Compact identifiers refer to locally-unique persistent identifiers that have been namespaced to provide global uniqueness. See https://www.biorxiv.org/content/10.1101/101279v3["Uniform resolution of compact identifiers for biomedical data"] for an excellent introduction to this topic.  By using compact identifiers in DRS URIs, along with a resolver registry (identifiers.org/n2t.net), systems can identify the current resolver when they need to translate the DRS URI into a fetchable URL. This allows a project to issue compact identifiers in DRS URIs and not be concerned if the project name or DRS hostname change in the future.  The current resolver can always be found through the identifiers.org/n2t.net registries.  Together the identifiers.org/n2t.net systems support the resolver lookup for over 700 compact identifiers formats used in the research community, making it possible for a DRS server to use any of these as DRS IDs (or to register a new compact identifier service of their own).
 
@@ -26,7 +26,60 @@ TIP: The CURIE format used by identifiers.org/n2t.net does not percent-encode re
 
 See the documentation on https://n2t.net/e/compact_ids.html[n2t.net] and https://docs.identifiers.org/[identifiers.org] for much more information on the compact identifiers used there and details about the resolution process. You can also register new prefixes (or mirrors by adding resource provider codes) for free using a simple online form.  Keep in mind, while anyone can register prefixes, the identifiers.org/n2t.net sites do basic hand curation to verify new prefix and resource (provider code) requests.  See those sites for more details on their security practices.
 
-== Appendix: Service Registry and Service Info
+.Note: DRS Client Compact Identifier-Based URI Resolution Process
+****
+A DRS client identifies the a DRS URI compact identifier components using the first occurance of "/" (optional) and ":" characters. These are not allowed inside the provider_code (optional) or the namespace. The ":" character is also not allowed in a Hostname-based DRS URI, providing a convenient mechanism to differentiate them. Once the provider_code (optional) and namespace are extracted from a DRS URI, a client can use services on identifiers.org to identify available resolvers. As a hypothetical example for a Data GUID namespace of "dg", the following GET request will return information about the namespace:
+
+    GET https://registry.api.identifiers.org/restApi/namespaces/search/findByPrefix?prefix=dg
+
+This information then points to resolvers for the "dg" namespace (assuming the namespace ID identified by the response to the above GET request for Data GUIDs is 1234):
+
+    GET https://registry.api.identifiers.org/restApi/resources/search/findAllByNamespaceId?id=1234
+
+This returns enough information to, ultimately, identify one or more resolvers and each have a URL prefix that, for DRS-supporting systems, provides a URL template for making a successful DRS GET request.  If applicable, a provide code can be supplied in the above requests to specify a particular mirror if there are multiple resolvers for this namespace.
+
+Walking through a hypothetical Data GUID example compact identifier DRS URI's resolution:
+
+    drs://dg:4503/00e6cfa9-a183-42f6-bb44-b70347106bbe
+
+Looking up the resolver on identifiers.org would tell you the URL pattern to get a DRS response would be:
+
+    https://dataguids.org/ga4gh/drs/v1/objects/dg.{$id}
+
+And that can then be translated to the following using the accession parsed from the compact identifier (which has been percent-encoded since DRS IDs must only use non-reserved URI characters):
+
+    GET https://dataguids.org/ga4gh/drs/v1/objects/dg.4503%2F00e6cfa9-a183-42f6-bb44-b70347106bbe
+
+_IDs in DRS hostname-based URIs/URLs are always percent-encoded to eliminate ambiguity even though the DRS compact identifier-based URIs do not percent-encode accessions._  This was done in order to 1) follow the CURIE conventions of identifiers.org/n2t.net for compact identifier-based DRS URIs and 2) to aid in readability for users who understand they are working with compact identifiers. **The general rule of thumb, when using an compact identifier accession as a DRS ID make sure to percent-encode it.**
+
+Please keep in mind identifiers.org/n2t.net does not support directly resolving percent-encoded accessions. _So we recommend the approach above for DRS clients to look up resolvers URL patters on these registries and then make a valid DRS GET request directly, using the percent-encoded accession as the DRS ID in the GET request._  This approach is also useful for caching resolvers and their URL patterns for performance reasons since this information is unlikely to change frequently.
+****
+
+.Note: Compact Identifier Registration
+****
+////
+TODO:
+////
+****
+
+== Appendix: Hostname-Based URIs
+
+.Note: DRS Client Hostname-Based URI Resolution Process
+****
+Strings of the form `drs://<hostname>/<id>` mean _“you can fetch the content with DRS id `<id>` from the DRS server at `<hostname>` "_.  For example, if a WES server was asked to process:
+
+    drs://drs.example.org/314159
+
+It would know that it could issue a GET request to:
+
+    https://drs.example.org/ga4gh/drs/v1/objects/314159
+
+to learn how to fetch that data object via one of the available access approaches.
+
+The protocol is always https and the port is always the standard 443 SSL port.  It would be invalid to include, for example, a different port in the DRS hostname-based URI.
+
+In hostname-based DRS URIs, the ID is always percent-encoded to ensure special characters do not interfere with subsequent DRS endpoint calls.  As such, ":" is not allowed in the URI and is a convenient way of differentiating from a compact identifier-based DRS URI.  Also, if a given DRS service implementation uses compact identifier accessions as their DRS IDs, they must be percent encoded before using them as DRS IDs in hostname-based DRS URIs.
+****
 
 .Note: Service Registry/Info and Future Versions of DRS
 ****
