--- a/docs/asciidoc/front_matter.adoc
+++ b/docs/asciidoc/front_matter.adoc
@@ -1,3 +1,8 @@
+////
+TODO:
+* I need to clear up the section showing the GET requests, clarify the "ID", and also probably mention these API calls are examples and we make not guarantees that identifiers.org/n2t.net won't change.
+////
+
 == Introduction
 
 The Data Repository Service (DRS) API provides a generic interface to data repositories so data consumers, including workflow systems, can access data objects in a single, standard way regardless of where they are stored and how they are managed. The primary functionality of DRS is to map a logical ID to a means for physically retrieving the data represented by the ID. The sections below describe the characteristics of those IDs, the types of data supported, how they can be pointed to using URIs, and how clients can use these URIs to ultimately make successful DRS API requests. This document describes the DRS API in detail and provides information on the specific endpoints, request formats, and responses.  This specification is intended for developers of DRS-compatible services and of clients that will call these DRS services.
@@ -25,8 +30,6 @@ There are two styles of DRS URIs: Compact Identifier-based and Hostname-based, b
 
 Compact identifiers refer to locally-unique persistent identifiers that have been namespaced to provide global uniqueness. See https://www.biorxiv.org/content/10.1101/101279v3["Uniform resolution of compact identifiers for biomedical data"] for an excellent introduction to this topic.  We support the use of compact identifiers in DRS URIs since many resources in the research community issue these identifiers in a variety of formats.  We leverage the resolver registry services of https://identifiers.org/[identifiers.org] or https://n2t.net/[n2t.net (Name-To-Thing)] to support any registered form of compact identifiers (Arks, DOIs, Data GUIDs, etc), allowing for the resolution of DRS objects without needing to use a hostname in the URI.
 
-TIP: Much more information is provided in the <<_appendix_compact_identifiers>> including details on the structure of compact identifiers.
-
 .Note: DRS Service Implementers Prefix Registration
 ****
 If your DRS implementation will issue IDs based on compact identifiers, and pass around DRS URIs using these compact identifiers, you *must* register your prefix (which consists of `[provider_code/]namespace`) on identifiers.org/n2t.net. If you don't, DRS clients will not know how to resolve your compact identifiers and, ultimately, generate a valid DRS URL that clients can access.
@@ -36,34 +39,8 @@ Translating the identifiers.org/n2t.net CURIE format to a DRS compact identifier
 
     drs://[provider_code/]namespace:accession
 
-.Note: DRS Client Compact Identifier-Based URI Resolution Process
-****
-A DRS client identifies the a DRS URI compact identifier components using the first occurance of "/" (optional) and ":" characters. These are not allowed inside the provider_code (optional) or the namespace. The ":" character is also not allowed in a Hostname-based DRS URI, providing a convenient mechanism to differentiate them. Once the provider_code (optional) and namespace are extracted from a DRS URI, a client can use services on identifiers.org to identify available resolvers. As a hypothetical example for a Data GUID namespace of "dg", the following GET request will return information about the namespace:
+TIP: Much more information is provided in the <<_appendix_compact_identifier-based_uris>> including details on the structure of compact identifiers and how to resolve compact identifier-based DRS URIs.
 
-    GET https://registry.api.identifiers.org/restApi/namespaces/search/findByPrefix?prefix=dg
-
-This information then points to resolvers for the "dg" namespace (assuming the namespace ID identified by the response to the above GET request for Data GUIDs is 1234):
-
-    GET https://registry.api.identifiers.org/restApi/resources/search/findAllByNamespaceId?id=1234
-
-This returns enough information to, ultimately, identify one or more resolvers and each have a URL prefix that, for DRS-supporting systems, provides a URL template for making a successful DRS GET request.  If applicable, a provide code can be supplied in the above requests to specify a particular mirror if there are multiple resolvers for this namespace.
-
-Walking through a hypothetical Data GUID example compact identifier DRS URI's resolution:
-
-    drs://dg:4503/00e6cfa9-a183-42f6-bb44-b70347106bbe
-
-Looking up the resolver on identifiers.org would tell you the URL pattern to get a DRS response would be:
-
-    https://dataguids.org/ga4gh/drs/v1/objects/dg.{$id}
-
-And that can then be translated to the following using the accession parsed from the compact identifier (which has been percent-encoded since DRS IDs must only use non-reserved URI characters):
-
-    GET https://dataguids.org/ga4gh/drs/v1/objects/dg.4503%2F00e6cfa9-a183-42f6-bb44-b70347106bbe
-
-_IDs in DRS hostname-based URIs/URLs are always percent-encoded to eliminate ambiguity even though the DRS compact identifier-based URIs do not percent-encode accessions._  This was done in order to 1) follow the CURIE conventions of identifiers.org/n2t.net for compact identifier-based DRS URIs and 2) to aid in readability for users who understand they are working with compact identifiers. **The general rule of thumb, when using an compact identifier accession as a DRS ID make sure to percent-encode it.**
-
-Please keep in mind identifiers.org/n2t.net does not support directly resolving percent-encoded accessions. _So we recommend the approach above for DRS clients to look up resolvers URL patters on these registries and then make a valid DRS GET request directly, using the percent-encoded accession as the DRS ID in the GET request._  This approach is also useful for caching resolvers and their URL patterns for performance reasons since this information is unlikely to change frequently.
-****
 
 ==== Hostname-based DRS URIs
 
@@ -71,26 +48,10 @@ Hostname-based DRS URIs are simpler than compact identifier-based URIs.  They co
 
     drs://<hostname>/<id>
 
-.Note: DRS Client Hostname-Based URI Resolution Process
-****
-Strings of the form `drs://<hostname>/<id>` mean _“you can fetch the content with DRS id `<id>` from the DRS server at `<hostname>` "_.  For example, if a WES server was asked to process:
-
-    drs://drs.example.org/314159
-
-It would know that it could issue a GET request to:
-
-    https://drs.example.org/ga4gh/drs/v1/objects/314159
-
-to learn how to fetch that data object via one of the available access approaches.
-
-The protocol is always https and the port is always the standard 443 SSL port.  It would be invalid to include, for example, a different port in the DRS hostname-based URI.
-
-In hostname-based DRS URIs, the ID is always percent-encoded to ensure special characters do not interfere with subsequent DRS endpoint calls.  As such, ":" is not allowed in the URI and is a convenient way of differentiating from a compact identifier-based DRS URI.  Also, if a given DRS service implementation uses compact identifier accessions as their DRS IDs, they must be percent encoded before using them as DRS IDs in hostname-based DRS URIs.
-****
-
 Hostname-based DRS URIs are less resistant to future project/domain name changes than compact identifiers.  But they do provide a more direct way of pointing to a DRS object which can have benefits.  The fact that they can be resolved using a simple rule means a DRS client can skip the extra overhead of a prefix lookup as is done for compact identifier-based URIs.  This can translate to possibly greater performance and/or security since the DRS server hostname is explicitly specified and this avoids the lookup of a resolver through a third-party service (identifiers.org/n2t.net).
 
-TIP: Information on how hostname-based DRS URI resolution to URLs will work in the future, when the 2.x major release happens, is provided in the <<_appendix_service_registry_and_service_info>>.
+TIP: Much more information is provided in the <<_appendix_hostname-based_uris>> including details on how to resolve hostname-based DRS URIs. It also includes information on how hostname-based DRS URI resolution to URLs will work in the future, when the 2.x major release happens.
+
 
 === DRS Datatypes
 
